Enabling and Disabling the Style-Timer to bound it to the Frame Creation context. r=nisheeth b=25406